--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online order</title>
-    <link rel="stylesheet" href="../Aadi/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header id="Home">
         <nav>
             <div class="LogoImage">
-                <img src="../Aadi/images/logo.jpg" alt="website logo" class="logo" />
+                <img src="./images/logo.jpg" alt="website logo" class="logo" />
                 <div>
                     <h1>Aura Lightenings</h1>
                     <h2>Light Your World with fine Aura.....</h2>
